--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ cycler==0.11.0
 docopt==0.6.2
 fake-useragent==0.1.11
 fastapi==0.63.0
+ffmpeg==1.4
 fonttools==4.38.0
+greenlet==2.0.1
 h11==0.12.0
 httpcore==0.12.3
 httpx==0.17.1
@@ -30,6 +32,7 @@ loguru==0.5.3
 lxml==4.9.1
 MarkupSafe==2.0.1
 matplotlib==3.5.0
+msvc-runtime==14.34.31931
 multidict==5.1.0
 nb-cli==0.4.2
 nonebot-adapter-cqhttp==2.0.0a13
@@ -39,10 +42,11 @@ packaging==23.0
 parse==1.19.0
 Pillow==8.3.1
 pipreqs==0.4.11
+playwright==1.32.1
 poyo==0.5.0
 prompt-toolkit==1.0.14
 pydantic==1.8.2
-pyee==8.2.2
+pyee==9.0.4
 pyfiglet==0.8.post1
 Pygments==2.9.0
 pygtrie==2.4.2
